--- a/Kevytlaskutus/src/main/resources/fxml/manageCustomers.fxml
+++ b/Kevytlaskutus/src/main/resources/fxml/manageCustomers.fxml
@@ -11,6 +11,6 @@
       <Button layoutX="13.0" layoutY="8.0" mnemonicParsing="false" onAction="#manageCompaniesAction" style="-fx-background-color: none; -fx-border-color: none; -fx-padding: 2;" text="My Companies" />
       <Button layoutX="113.0" layoutY="8.0" mnemonicParsing="false" onAction="#manageCustomersAction" style="-fx-background-color: none; -fx-border-color: none; -fx-padding: 2;" text="Customers" />
       <Button layoutX="192.0" layoutY="8.0" mnemonicParsing="false" onAction="#manageProductsAction" style="-fx-background-color: none; -fx-border-color: none; -fx-padding: 2;" text="Products" />
-      <Button layoutX="13.0" layoutY="367.0" mnemonicParsing="false" text="Add new customer" AnchorPane.bottomAnchor="10.0" />
+      <Button layoutX="13.0" layoutY="367.0" mnemonicParsing="false" onAction="#addNewCustomerCompanyAction" text="Add new customer" AnchorPane.bottomAnchor="10.0" />
    </children> 
 </AnchorPane>
