--- a/Kevytlaskutus/src/main/resources/fxml/companyForm.fxml
+++ b/Kevytlaskutus/src/main/resources/fxml/companyForm.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -13,11 +14,7 @@
       <Button fx:id="saveFormButton" layoutX="13.0" layoutY="367.0" mnemonicParsing="false" text="Save" AnchorPane.bottomAnchor="10.0" />
       <ScrollPane layoutY="37.0" prefHeight="321.0" prefWidth="600.0" AnchorPane.bottomAnchor="43.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="38.0">
         <content>
-          <AnchorPane fx:id="editFormContainerPane" minHeight="0.0" minWidth="0.0" prefWidth="554.0">
-               <padding>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-               </padding>
-            </AnchorPane>
+          <Pane fx:id="editFormContainerPane" minHeight="0.0" minWidth="0.0" prefWidth="554.0"></Pane>
         </content>
       </ScrollPane>
    </children> 
