--- a/Kevytlaskutus/src/main/resources/fxml/FormEditCompany.fxml
+++ b/Kevytlaskutus/src/main/resources/fxml/FormEditCompany.fxml
@@ -12,7 +12,8 @@
       <Button layoutX="113.0" layoutY="8.0" mnemonicParsing="false" onAction="#manageCustomersAction" style="-fx-background-color: none; -fx-border-color: none; -fx-padding: 2;" text="Customers" />
       <Button layoutX="192.0" layoutY="8.0" mnemonicParsing="false" onAction="#manageProductsAction" style="-fx-background-color: none; -fx-border-color: none; -fx-padding: 2;" text="Products" />
       <Button fx:id="saveFormButton" layoutX="13.0" layoutY="367.0" mnemonicParsing="false" text="Save" AnchorPane.bottomAnchor="10.0" />
-      <ScrollPane layoutY="37.0" prefHeight="321.0" prefWidth="600.0" AnchorPane.bottomAnchor="43.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="38.0">
+      <Pane fx:id="noticePane" minHeight="0.0" minWidth="0.0" prefWidth="554.0" AnchorPane.topAnchor="36.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" style="-fx-background-color: #FFFFFF;"></Pane>
+      <ScrollPane layoutY="37.0" prefHeight="321.0" prefWidth="600.0" AnchorPane.bottomAnchor="43.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="70.0">
         <content>
           <Pane fx:id="editFormContainerPane" minHeight="0.0" minWidth="0.0" prefWidth="554.0"></Pane>
         </content>
