--- a/Kevytlaskutus/src/main/resources/fxml/FormEditProduct.fxml
+++ b/Kevytlaskutus/src/main/resources/fxml/FormEditProduct.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -11,7 +12,8 @@
       <Button layoutX="113.0" layoutY="8.0" mnemonicParsing="false" onAction="#manageCustomersAction" style="-fx-background-color: none; -fx-border-color: none; -fx-padding: 2;" text="Customers" />
       <Button layoutX="192.0" layoutY="8.0" mnemonicParsing="false" onAction="#manageProductsAction" style="-fx-background-color: none; -fx-border-color: none; -fx-padding: 2;" text="Products" />
       <Button fx:id="saveFormButton" layoutX="13.0" layoutY="367.0" mnemonicParsing="false" text="Save Product" AnchorPane.bottomAnchor="10.0" />
-      <ScrollPane layoutY="37.0" prefHeight="321.0" prefWidth="600.0" AnchorPane.bottomAnchor="43.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="38.0">
+      <Pane fx:id="noticePane" minHeight="0.0" minWidth="0.0" prefWidth="554.0" AnchorPane.topAnchor="36.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" style="-fx-background-color: #FFFFFF;"></Pane>
+      <ScrollPane layoutY="37.0" prefHeight="321.0" prefWidth="600.0" AnchorPane.bottomAnchor="43.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="70.0">
         <content>
           <AnchorPane fx:id="editFormContainerPane" minHeight="0.0" minWidth="0.0" prefWidth="554.0">
                <padding>
