--- a/Kevytlaskutus/src/main/resources/fxml/editCustomer.fxml
+++ b/Kevytlaskutus/src/main/resources/fxml/editCustomer.fxml
@@ -11,7 +11,7 @@
       <Button layoutX="13.0" layoutY="8.0" mnemonicParsing="false" onAction="#manageCompaniesAction" style="-fx-background-color: none; -fx-border-color: none; -fx-padding: 2;" text="My Companies" />
       <Button layoutX="113.0" layoutY="8.0" mnemonicParsing="false" onAction="#manageCustomersAction" style="-fx-background-color: none; -fx-border-color: none; -fx-padding: 2;" text="Customers" />
       <Button fx:id="saveFormButton" layoutX="13.0" layoutY="367.0" mnemonicParsing="false" text="Save Customer" AnchorPane.bottomAnchor="10.0" />
-      <Pane fx:id="noticePane" minHeight="0.0" minWidth="0.0" prefWidth="554.0" AnchorPane.topAnchor="36.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" style="-fx-background-color: #FFFFFF;"></Pane>
+      <Pane fx:id="noticePane" minHeight="0.0" minWidth="0.0" prefWidth="554.0" style="-fx-background-color: #FFFFFF;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="36.0" />
       <ScrollPane layoutY="37.0" prefHeight="321.0" prefWidth="600.0" AnchorPane.bottomAnchor="43.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="70.0">
         <content>
           <AnchorPane fx:id="editFormContainerPane" minHeight="0.0" minWidth="0.0" prefWidth="554.0">
@@ -21,5 +21,6 @@
             </AnchorPane>
         </content>
       </ScrollPane>
+      <Button fx:id="cancelButton" layoutX="534.0" layoutY="364.0" mnemonicParsing="false" text="Cancel" />
    </children> 
 </AnchorPane>
