--- a/Kevytlaskutus/src/main/resources/fxml/editCompany.fxml
+++ b/Kevytlaskutus/src/main/resources/fxml/editCompany.fxml
@@ -16,6 +16,6 @@
           <Pane fx:id="editFormContainerPane" minHeight="0.0" minWidth="0.0" prefWidth="554.0" />
         </content>
       </ScrollPane>
-      <Button fx:id="cancelButton" layoutX="534.0" layoutY="364.0" mnemonicParsing="false" text="Cancel" />
+      <Button fx:id="cancelButton" layoutX="734.0" layoutY="523.0" mnemonicParsing="false" text="Cancel" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
    </children> 
 </AnchorPane>
