--- a/Kevytlaskutus/src/main/resources/fxml/editCustomer.fxml
+++ b/Kevytlaskutus/src/main/resources/fxml/editCustomer.fxml
@@ -21,6 +21,6 @@
             </AnchorPane>
         </content>
       </ScrollPane>
-      <Button fx:id="cancelButton" layoutX="534.0" layoutY="364.0" mnemonicParsing="false" text="Cancel" />
+      <Button fx:id="cancelButton" layoutX="734.0" layoutY="523.0" mnemonicParsing="false" text="Cancel" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
    </children> 
 </AnchorPane>
