--- a/Kevytlaskutus/src/main/resources/fxml/editCustomer.fxml
+++ b/Kevytlaskutus/src/main/resources/fxml/editCustomer.fxml
@@ -12,7 +12,7 @@
       <Button layoutX="113.0" layoutY="8.0" mnemonicParsing="false" onAction="#manageCustomersAction" style="-fx-background-color: none; -fx-border-color: none; -fx-padding: 2;" text="Customers" />
       <Button fx:id="saveFormButton" layoutX="13.0" layoutY="367.0" mnemonicParsing="false" text="Save Customer" AnchorPane.bottomAnchor="10.0" />
       <Pane fx:id="noticePane" minHeight="0.0" minWidth="0.0" prefWidth="554.0" style="-fx-background-color: #FFFFFF;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="36.0" />
-      <ScrollPane layoutY="37.0" prefHeight="321.0" prefWidth="600.0" AnchorPane.bottomAnchor="43.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="70.0">
+      <ScrollPane fitToWidth="true" layoutY="37.0" prefHeight="321.0" prefWidth="600.0" AnchorPane.bottomAnchor="43.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="70.0">
         <content>
           <AnchorPane fx:id="editFormContainerPane" minHeight="0.0" minWidth="0.0" prefWidth="554.0">
                <padding>
@@ -20,6 +20,9 @@
                </padding>
             </AnchorPane>
         </content>
+         <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </padding>
       </ScrollPane>
       <Button fx:id="cancelButton" layoutX="734.0" layoutY="523.0" mnemonicParsing="false" text="Cancel" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
    </children> 
