--- a/Kevytlaskutus/src/main/resources/fxml/editInvoice.fxml
+++ b/Kevytlaskutus/src/main/resources/fxml/editInvoice.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,10 +13,13 @@
       <Button layoutX="13.0" layoutY="8.0" mnemonicParsing="false" onAction="#manageCompaniesAction" style="-fx-background-color: none; -fx-border-color: none; -fx-padding: 2;" text="My Companies" />
       <Button layoutX="113.0" layoutY="8.0" mnemonicParsing="false" onAction="#manageCustomersAction" style="-fx-background-color: none; -fx-border-color: none; -fx-padding: 2;" text="Customers" />
       <Pane fx:id="noticePane" minHeight="0.0" minWidth="0.0" prefWidth="554.0" style="-fx-background-color: #FFFFFF;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="36.0" />
-      <ScrollPane layoutY="37.0" prefHeight="392.0" prefWidth="601.0" AnchorPane.bottomAnchor="43.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="199.0" AnchorPane.topAnchor="70.0">
+      <ScrollPane fitToWidth="true" layoutY="37.0" prefHeight="392.0" prefWidth="601.0" AnchorPane.bottomAnchor="43.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="199.0" AnchorPane.topAnchor="70.0">
         <content>
           <Pane fx:id="editFormContainerPane" minHeight="0.0" minWidth="0.0" prefWidth="554.0" />
         </content>
+         <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </padding>
       </ScrollPane>
       <Button fx:id="saveFormButton" layoutX="13.0" layoutY="367.0" mnemonicParsing="false" text="Save invoice" AnchorPane.bottomAnchor="10.0" />
       <Button fx:id="addNewRowButton" layoutX="106.0" layoutY="364.0" mnemonicParsing="false" text="Add new product to invoice" AnchorPane.bottomAnchor="10.0" />
@@ -39,19 +43,19 @@
                   <Font size="17.0" />
                </font>
             </Text>
-            <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total excl. Taxes" />
+            <Text layoutX="12.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total excl. Taxes" />
             <Text fx:id="invoiceDueDate" layoutX="13.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="00.00.0000">
                <font>
                   <Font size="17.0" />
                </font>
             </Text>
-            <Text layoutX="13.0" layoutY="186.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Due Date" />
+            <Text layoutX="12.0" layoutY="186.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Due Date" />
             <Text fx:id="invoiceReferenceNumber" layoutX="13.0" layoutY="261.0" strokeType="OUTSIDE" strokeWidth="0.0" text="000000000">
                <font>
                   <Font size="17.0" />
                </font>
             </Text>
-            <Text layoutX="13.0" layoutY="240.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Reference Number" />
+            <Text layoutX="12.0" layoutY="240.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Reference Number" />
          </children>
       </Pane>
    </children> 
